--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Alist v2",
-  "description": "Alist on Heroku",
-  "keywords": ["Alist"],
+  "name": "klist",
+  "description": "klist on Heroku",
+  "keywords": ["klist"],
   "env": {
     "CACHE_EXPIRATION": {
       "description": "Cache invalidation time (unit: minutes)",
@@ -21,7 +21,7 @@
       "plan": "heroku-postgresql"
     }
   ],
-  "website": "https://github.com/Xhofe/alist",
+  "website": "https://github.com/",
   "repository": "https://github.com/krishd9895/alist-heroku-postgres",
   "logo": "https://cdn.jsdelivr.net/gh/alist-org/logo@main/logo.svg",
   "stack": "container"
